styles/projects-section.styles.css
:root {
    --project-background-light: #404040;
    --project-background-dark: #FFFFFF;
    --project-background: var(--project-background-light);

    --project-social-icon-foreground-dark: var(--social-icon-foreground-light);
    --project-social-icon-foreground-light: var(--social-icon-foreground-dark);
    --project-social-icon-foreground: var(--project-social-icon-foreground-light);

    --project-social-icon-background-dark: var(--social-icon-background-light);
    --project-social-icon-background-light: var(--social-icon-background-dark);
    --project-social-icon-background: var(--project-social-icon-background-light);

    --project-description-text-color-light: var(--primary-text-color-dark);
    --project-description-text-color-dark: var(--primary-text-color-light);
    --project-description-text-color: var(--project-description-text-color-light);

    --project-title-background-light: #FFFFFF;
    --project-title-background-dark: #1A1A1A;
    --project-title-background: var(--project-title-background-light);
}

body.darkmode {
    --project-background: var(--project-background-dark);
    --project-social-icon-background: var(--project-social-icon-background-dark);
    --project-social-icon-foreground: var(--project-social-icon-foreground-dark);
    --project-description-text-color: var(--project-description-text-color-dark);
    --project-title-background: var(--project-title-background-dark);
}

.projects-container {
    margin-top: 2rem;
    display:flex;
    flex-wrap: nowrap;
    overflow: hidden;
    padding: 0;
    height: 100vh;
}

.project-wrapper {
    display: grid;
    place-items: center;
    width: 100%;
    height: 100%;
    flex-shrink: 0;
}

.project {
    --project-border-radius: 15px;
    --project-image-border-radius: 20px;
    --project-title-color: var(--orange-light);

    --project-width: 95vw;
    --project-title-font-size: 2rem;
    --project-title-vertical-padding: 0.2rem;
    --project-title-horizontal-padding: 0.3rem;
    --project-title-height: calc(var(--project-title-font-size) + 2*var(--project-title-vertical-padding));

    --project-social-icon-size: 3.5rem;

    width: var(--project-width);
    height: fit-content;
    position: relative;
    z-index: 0;

    background-color: var(--project-background);
    border-radius: var(--project-border-radius);

    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 5rem;
}

/*transparent infinite project background*/
.project::before {
    content: '';
    background-image: url('/assets/infinite-backgrounds/02\ Voronoi\ Mesh.png');
    background-repeat: repeat;
    background-size: 250px;
    opacity: .1;
    border-radius: var(--project-border-radius);

    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 1;
}

.project-title {
    position: absolute;
    top: calc(-0.5*var(--project-title-height));
    right: calc(-0.4* (100vw - var(--project-width)));
    box-shadow: 5px 10px 4px 3px rgba(0, 0, 0, .15);

    background-color: var(--project-title-background);
    z-index: 2;
    border-radius: var(--project-border-radius);

    font-size: 2rem;
    color: var(--project-title-color);
    font-weight: 700;
    padding: var(--project-title-vertical-padding) var(--project-title-horizontal-padding);
}

.project-image-wrapper {
    width: 90%;
    margin-top: calc(1.25*var(--project-title-height));
    position: relative;
    z-index: 2;
    font-size: 0;
}

.project-image {
    box-shadow: 15px 15px 4px rgba(0, 0, 0, .2);
    aspect-ratio: 1;
    width: 100%;
    border-radius: var(--project-image-border-radius);
}

.project .social-icon-wrapper {
    width: var(--project-social-icon-size);
    height: var(--project-social-icon-size);
    border-radius: calc(var(--project-social-icon-size)/2);
    background-color: var(--project-social-icon-background);
}

.project-image-wrapper>.social-icon-wrapper {
    position: absolute;
    bottom: calc(-0.5*var(--project-social-icon-size));
    left: calc(0.5*var(--project-social-icon-size));
}

.project-social-icon {
    fill: var(--project-social-icon-foreground);
    transition: var(--main-transition-time);
}

.project-content {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    width: 90%;
    margin-top: calc(0.75*var(--project-social-icon-size));
    z-index: 5;
}

.project-description {
    font-size: 1.1rem;
    margin: 0;
    color: var(--project-description-text-color);
    width: 100%;
    text-align: right;
}

.project-content-separator {
    margin-top: .75rem;
}

.project-content-separator::before {
    --seperator-width: 6rem;
    --separator-height: .1rem;
    --separator-color: var(--project-description-text-color);

    content: '';
    display: block;
    width: var(--seperator-width);
    height: var(--separator-height);
    background-color: var(--separator-color);
    opacity: 1;
    border-radius: calc(var(--separator-height)/2);
}

.view-project-btn {
    --view-project-btn-font-size: 1.4rem;
    --view-project-btn-horizontal-padding: 0.6rem;
    --view-project-btn-height: calc(var(--view-project-btn-font-size) + 2*var(--view-project-btn-horizontal-padding));

    text-decoration: none;
    cursor: pointer;
    margin-top: 1.5rem;
    margin-bottom: 2rem;

    font-size: var(--view-project-btn-font-size);
    font-weight: 600;
    color: white;

    background: linear-gradient(to right, var(--orange-light), var(--orange-dark));
    padding: var(--view-project-btn-horizontal-padding) 0.8rem;
    border-radius: calc(var(--view-project-btn-height)/2);
}

.project-content>.social-icon-wrapper {
    display: none;
}

@media (min-width: 600px) {
    .project {
        display: grid;
        grid-template-columns: auto auto;
        align-items: center;
    }

    .project-image-wrapper {
        margin-top: calc(1.25*var(--project-title-height));
        align-self: start;
        margin-left: 1.5rem;
        margin-bottom: 1.5rem;
    }

    .project-image-wrapper>.social-icon-wrapper {
        display: none;
    }

    .project-content {
        justify-self: end;
        margin-top: calc(1.25*var(--project-title-height));
        margin-right: 1.5rem;
    }

    .project-content>.social-icon-wrapper {
        display: flex;
        z-index: 5;
        margin-bottom: 1rem;
    }

    .project-content>.view-project-btn {
        margin-bottom: 1rem;
    }
}

@media (min-width: 750px) {
    .project-image-wrapper {
        --project-image-offset: calc(-0.4* (100vw - var(--project-width)));
        top: var(--project-image-offset);
        left: var(--project-image-offset);

        align-self: start;
        margin-top: 0;
        margin-left: 0;
        margin-bottom: 0;
        height: 100%;
        max-height: calc(0.35*var(--project-width));
        width: auto;
        aspect-ratio: 1;
        margin-right: calc(-1.5*var(--project-image-offset));
    }
}

@media (min-width: 1050px) {
    .project {
        --project-width: 1000px;
        margin-top: 3rem;
    }

    .project-title {
        right: -2rem;
    }

    .project-image-wrapper {
        top: -1.5rem;
        left: -1.5rem;
        margin-right: 2rem;
    }

    .project-content>p {
        font-size: 1.5rem;
    }
}

/*reduced projects (no github or no demo)*/
.project.no-github .social-icon-wrapper {
    display: none;
}

.project.no-demo .view-project-btn {
    display: none;
}

.project.no-demo .project-content-separator {
    display: none;
}

.project.no-demo .project-content {
    display: block;
    margin-bottom: calc(0.75*var(--project-social-icon-size));
}

/*reduced projects on desktop screens*/
@media (min-width: 600px) {
    .project.no-demo .project-content {
        display: flex;
        margin-bottom: 0;
    }

    .project.no-demo:not(.no-github) .social-icon-wrapper {
        margin-top: 1.5rem;
    }

    .project.no-demo.no-github .project-content {
        display: block;
        margin-bottom: calc(1.25*var(--project-title-height));
    }

    .project.no-demo .project-content-separator {
        /*Show separator because for github-logo, not necessary on mobile because logo is on another position*/
        display: block;
    }

    .project.no-demo.no-github .project-content-separator {
        display: none;
    }
}

.project-social-icon {
    aspect-ratio: 1;
}

.project-social-icon.dark {
    display: none;
}

.project-social-icon.light {
    display: block;
}

body.darkmode .project-social-icon.dark {
    display: block;
}

body.darkmode .project-social-icon.light {
    display: none;
}

